test/should-fail/调用错误-1.j
function test takes nothing returns nothing
    set test()
endfunction